# 4C

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  VERSION
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: buildtest.yml  checkcode.yml  coverage.yml  deploy.yml  docker.yml  docker_prebuilt_4c.yml  documentation.yml  nightly_tests.yml  trilinos-develop.yml
apps/: CMakeLists.txt
apps/create_rtdfiles/: 4C_create_rtdfiles_base.cpp  4C_create_rtdfiles_utils.cpp  4C_create_rtdfiles_utils.hpp  4C_create_rtdfiles_wrapper.cpp  4C_create_rtdfiles_wrapper.hpp  CMakeLists.txt
apps/global_full/: 4C_global_full_entrypoint_switch.cpp  4C_global_full_io.cpp  4C_global_full_io.hpp  4C_global_full_main.cpp
apps/post_monitor/: 4C_post_monitor.cpp
apps/post_processor/: 4C_post_processor_single_field_writers.cpp  4C_post_processor_structure_stress.cpp  4C_post_processor_thermo_heatflux.cpp
cmake/: setup_install.cmake  setup_tests.cmake
cmake/configure/: configure_ArborX.cmake  configure_Backtrace.cmake  configure_Boost.cmake  configure_CLI11.cmake  configure_CLN.cmake  configure_FFTW.cmake  configure_HDF5.cmake  configure_MIRCO.cmake  configure_MPI.cmake  configure_Qhull.cmake  configure_Trilinos.cmake  configure_VTK.cmake  configure_ZLIB.cmake  configure_deal.II.cmake  configure_gmsh.cmake  configure_magic_enum.cmake  configure_pybind11.cmake  configure_ryml.cmake
cmake/functions/: four_c_configure_dependency.cmake  four_c_testing_functions.cmake
doc/documentation/: conf.py.in  (+1 more)
src/: CMakeLists.txt
tests/: list_of_tests.cmake
unittests/: CMakeLists.txt
(+3551 files in other folders)
